Modified form button

--- a/users/templates/patient_form.html
+++ b/users/templates/patient_form.html
@@ -12,7 +12,7 @@
 
         <h3>Upload Images of Patient's Condition</h3>
         <div id="image-fields">
-            <label for="patient_image_input">Upload Image(s):</label>
+            <label for="patient_image_input" class="custom-file-button">Click Photo(s):</label>
             <input type="file" id="patient_image_input" name="patient_images" accept="image/*" capture="environment" class="image-input" multiple onchange="handleFileSelect(event)">
         </div>
         <div id="selected-images-container"></div>
