--- a/users/templates/base_entrance.html
+++ b/users/templates/base_entrance.html
@@ -10,6 +10,26 @@
 </head>
 
 <style>
+    #patient_image_input {
+        display: none;
+    }
+
+    .custom-file-button {
+        display: inline-block;
+        background-color: #007bff;
+        color: white;
+        padding: 10px 20px;
+        border-radius: 5px;
+        cursor: pointer;
+        font-size: 14px;
+        text-align: center;
+        border: none;
+    }
+
+    .custom-file-button:hover {
+        background-color: #0056b3;
+    }
+
     .messages {
         margin-top: 20px;
     }
