--- a/users/templates/base_entrance.html
+++ b/users/templates/base_entrance.html
@@ -10,6 +10,18 @@
 </head>
 
 <style>
+    .checkbox-container {
+        display: inline-block;
+    }
+
+    .checkbox-container #agree-checkbox {
+        vertical-align: middle;
+    }
+
+    .checkbox-container label {
+        vertical-align: middle;
+    }
+
     #patient_image_input {
         display: none;
     }
