--- a/users/templates/base_entrance.html
+++ b/users/templates/base_entrance.html
@@ -11,15 +11,9 @@
 
 <style>
     .checkbox-container {
-        display: inline-block;
-    }
-
-    .checkbox-container #agree-checkbox {
-        vertical-align: middle;
-    }
-
-    .checkbox-container label {
-        vertical-align: middle;
+        display: flex;
+        align-items: center;
+        gap: 8px;
     }
 
     #patient_image_input {
